Se crea el servicio que lista los proyectoscurriculares por facultad
