# swagger/swagger.json
@@ -705,6 +705,26 @@
                 }
             }
         },
+        "/dependencia_padre/FacultadesConProyectos": {
+            "get": {
+                "tags": [
+                    "dependencia_padre"
+                ],
+                "description": "Lista las facultades con sus respectivos proyectos curriculares",
+                "operationId": "DependenciaPadreController.FacultadesConProyectos",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.DependenciaPadre"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/dependencia_padre/{id}": {
             "get": {
                 "tags": [
